// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with emoji 1`] = `
.emotion-0 {
  background: red;
}

<button
  className="emotion-0 emotion-1"
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button with text 1`] = `
.emotion-0 {
  background: red;
}

<button
  className="emotion-0 emotion-1"
>
  Hello Button
</button>
`;
